Fixed operator not showing up in secondary
- Added simple enum for what output I'm writing to

--- a/My_Calculator/My_Calculator.csproj
+++ b/My_Calculator/My_Calculator.csproj
@@ -71,6 +71,7 @@
     </Compile>
     <Compile Include="Helpers\Enums\MathFunctionEnum.cs" />
     <Compile Include="Helpers\Enums\OperatorEnum.cs" />
+    <Compile Include="Helpers\Enums\OutputTextBlockEnum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
