--- a/My_Calculator/My_Calculator.csproj
+++ b/My_Calculator/My_Calculator.csproj
@@ -62,6 +62,12 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Helpers\Enums\ConversionTypeEnum.cs" />
+    <Compile Include="Helpers\Enums\NumeralSystemEnum.cs" />
+    <Compile Include="Helpers\NumeralSystemConversion.cs" />
+    <Compile Include="SelectConversion.xaml.cs">
+      <DependentUpon>SelectConversion.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Helpers\Enums\InputControlEnum.cs" />
@@ -100,6 +106,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="MainWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="SelectConversion.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
