--- a/My_Calculator/My_Calculator.csproj
+++ b/My_Calculator/My_Calculator.csproj
@@ -72,9 +72,11 @@
       <DependentUpon>TimeConversionWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Helpers\Enums\ConversionTypeEnum.cs" />
+    <Compile Include="Helpers\Enums\FileSizeTypeEnum.cs" />
     <Compile Include="Helpers\Enums\TemperatureTypeEnum.cs" />
     <Compile Include="Helpers\Enums\TimeTypeEnum.cs" />
     <Compile Include="Helpers\Enums\NumeralSystemEnum.cs" />
+    <Compile Include="Helpers\FileSizeConversion.cs" />
     <Compile Include="Helpers\NumeralSystemConversion.cs" />
     <Compile Include="Helpers\TemperatureConversion.cs" />
     <Compile Include="Helpers\TimeConversion.cs" />
